# Polytris

./: .gitignore  .gitmodules  CMakeLists.txt  Polytris.sln  Polytris.vcxproj  Polytris.vcxproj.filters  main.py
.github/workflows/: cmake-multi-platform.yml
include/: AssetsManager.h  Block.h  Keyboard.h  Leaderboard.h  Menu.h  NameEntry.h  Player.h  Window.h  textTools.h
rsc/: assets.load  mainMenuMessage.txt
rsc/SRS/: wallKick.csv
scripts/: affichage.py  block.py  joueur.py  tools.py
src/: AssetsManager.cpp  AssetsManager.h  AttackBuffer.cpp  AttackBuffer.h  Block.cpp  Block.h  Keyboard.cpp  Keyboard.h  Leaderboard.cpp  Leaderboard.h  Menu.cpp  Menu.h  NameEntry.cpp  Player.cpp  Player.h  Window.cpp  Window.h  main.cpp  textTools.cpp
src/core/: AssetsManager.cpp  Keyboard.cpp  Window.cpp  textTools.cpp
